--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0"
   }
 }
